--- a/app/dam/dam.html
+++ b/app/dam/dam.html
@@ -1,1 +1,12 @@
-<h1>Dam</h1>
+<section class="content" id="content">
+  <h3>sistema</h3>
+  <h2>{{ $ctrl.name || 'cantareira' }}</h2>
+  <div class="indicator">
+    <span class="pct">{{ $ctrl.volume_armazenado || '5.5' }}<strong>%</strong></span>
+    <span class="icon rain">hoje  <br/>{{ $ctrl.pluviometria_do_dia || '0.0mm' }}</span>
+    <a ng-click="share()" class="icon share facebook">Compartilhar</a>
+    <a ng-click="shareTwitter()" class="icon share twitter" data-lang="pt" data-count="none" data-hashtags="nossaaguasp">Tweetar</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+    </script>
+  </div>
+</section>
