--- a/app/dam/dam.html
+++ b/app/dam/dam.html
@@ -1,12 +1,16 @@
-<section class="content" id="content">
+<div class="instructions" ng-class="{'instructions--is-visible': !$ctrl.data}">
+  <h3>Escolha uma das represas ao lado</h3>
+</div>
+
+<section class="content" ng-class="{'content--is-visible': $ctrl.data}">
   <h3>sistema</h3>
-  <h2>{{ $ctrl.name || 'cantareira' }}</h2>
+  <h2>{{ $ctrl.data.name }}</h2>
   <div class="indicator">
-    <span class="pct">{{ $ctrl.volume_armazenado || '5.5' }}<strong>%</strong></span>
-    <span class="icon rain">hoje  <br/>{{ $ctrl.pluviometria_do_dia || '0.0mm' }}</span>
+    <span class="pct">{{ $ctrl.data.amount }}<strong>%</strong></span>
+    <span class="icon rain">hoje  <br/>{{ $ctrl.data.dailyAmount }}</span>
     <a ng-click="share()" class="icon share facebook">Compartilhar</a>
     <a ng-click="shareTwitter()" class="icon share twitter" data-lang="pt" data-count="none" data-hashtags="nossaaguasp">Tweetar</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-    </script>
+    <!--<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+    </script>-->
   </div>
 </section>
