Add jekyll configuration file

--- a/app/app.html
+++ b/app/app.html
@@ -10,5 +10,5 @@
 <main class="main" ng-cloak ui-view=""></main>
 
 <footer class="footer">
-  DADOS <img src="assets/images/sabesp.png">
+  DADOS <img src="./public/assets/images/sabesp.png">
 </footer>
