Remove unused assets from previous version

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="/assets/icons/icon-48.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Nossa Água São Paulo</title>
+    <meta name="description" content="Acompanhe o nível das represas que abastecem São Paulo e compartilhe.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="Nossa Água São Paulo" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="Rafaell Lycan" />
+    <meta property="og:image" content="/assets/images/facebook.png" />
+    <meta name="author" content="Rafaell Lycan" />
+    <meta name="keywords" content="monitoramento,acompanhamento,dados,cantareira,mananciais,são paulo,sabesp,água,represas,níveis" />
   </head>
   <body>
     <div id="root"></div>
